# coverage-emse-24

./: .gitignore  README.md
code/code-mnist/: .dockerignore  .gitignore  README.md  analysis.py  config.py  default_experiments.py  pyproject.toml  requirements.txt  run.py
code/code-mnist/algorithm/: algorithm.py  nsga2_dt_sim.py  nsga2_sim.py  ps.py  ps_fps.py  ps_grid.py  ps_rand.py
code/code-mnist/algorithm_analysis/: Analysis.py
code/code-mnist/evaluation/: critical.py  fitness.py
code/code-mnist/experiment/: search_configuration.py
code/code-mnist/model_ga/: problem.py  result.py
code/code-mnist/problem/: adas_problem.py  fitness_mnist.py  metric_config.py  mnist_loader.py  mnist_problem.py  operator.py  operator_full.py  pymoo_test_problem.py  test_problems.py
code/code-mnist/quality_indicators/: quality.py  test.py
code/code-mnist/scripts/: generate_3d_plot.py  generate_analysis_subfolder.py  generate_avg_combined.py  generate_comparison_plot.py  generate_comparison_plot_variation.py  generate_comparison_plot_variation_mseed.py  generate_cov_comparison.py  generate_multiseed_variation.py  generate_os_plot.py
code/code-mnist/scripts_mseed/: run_analysis_seeds.sh  run_generation_refset.sh
code/code-mnist/simulation/: carla_simulation.py  dummy_simulation.py  prescan_simulation.py  simulator.py
code/code-mnist/statistical_tests/: vargha_delaney.py  wilcoxon.py
code/code-mnist/tests/: analysis_test.py  analysis_test_dm.py
code/code-mnist/utils/: analysis_utils.py  archive_utils.py  duplicates.py  file_utils.py  log_utils.py  math_utils.py  (+4 more)
(+65208 files in other folders)
