[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenSBT-FOCETA"
version = "1.0"
authors = [
  { name="Lev Sorokin", email="sorokin@fortiss.org" },
]
description = "Apply search-based testing to automated and autonomus driving systems."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
    "deap",
    "numpy",
    "scipy",
    "matplotlib",
    "pydotplus",
    "graphviz",
    "docker",
    "pandas",
    "setuptools",
    "scikit-learn",
    "pymoo",
    "dill==0.3.6",
    "psutil"
]
